wordpress/wordpress-single-deployment-no-volumes.yml
kubapiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6-php8.0
          ports:
            - name: http-port
              containerPort: 80
        - name: mysql
          image: mysql:8
          ports:
            - name: mysql-port
              containerPort: 3306
