wordpress/wordpress-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6-php8.0
          # uncomment to fix perm issue, see also https://github.com/kubernetes/kubernetes/issues/2630
          # command: ['bash', '-c', 'mkdir -p /var/www/html/wp-content/uploads; chown www-data:www-data /var/www/html/wp-content/uploads && docker-entrypoint.sh apache2-foreground']
          ports:
            - name: http-port
              containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html/wp-content/uploads
              name: uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: wp-storage
