wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
    - port: 31001
      NodePort: 31001
      target-port: http-port
      protocol: TCP
