wordpress/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myservice
spec:
  rules:
    - host: website.com
      http:
        paths:
          - path:
            backend:
              service:
                name: wordpress
                port:
                  number: 80
  ingressClassName: nginx
