wordpress/wordpress-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservice
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /wp/
            backend:
              service:
                name: wordpress
                port:
                  number: 80
